# tempo-bot

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  publish.yml
docs/: calendar.md
src/: lib.rs  main.rs  work_event.rs
src/calendar/: calendar_parser.rs  meetings.rs  mod.rs
src/calendar/models/: meeting.rs  mod.rs
src/http/: http_client.rs
src/jira/: jira_client.rs  mod.rs  time_estimation.rs
src/jira/models/: board_configuration.rs  component.rs  epic.rs  issue.rs  list_issues_response.rs  list_sprints_response.rs  mod.rs  priority.rs  resolution.rs  sprint.rs  status.rs  time_tracking.rs  user.rs
src/tempo/: mod.rs  tempo_client.rs
src/tempo/models/: list_schedules_response.rs  list_worklogs_response.rs  mod.rs  schedule.rs  worklog.rs
src/utils/: date.rs
