[package]
name = "tempo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
chrono = "0.4.19"
dialoguer = "0.9.0"
env_logger = "0.9.0"
log = "0.4.14"
num-traits = "0.2.14"
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
