[package]
name = "tempo-bot"
version = "0.2.0"
edition = "2021"
authors = ["Fabien Caylus <fabien.caylus@gmail.com>"]
description = "Log your time on Tempo automatically, based on your current tickets in Jira."
homepage = "https://github.com/fcaylus/tempo-bot"
repository = "https://github.com/fcaylus/tempo-bot"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
bytes = "1.1.0"
clap = { version = "3.0.5", features = ["derive"] }
chrono = "0.4.19"
chrono-tz = "0.5.3"
dialoguer = "0.9.0"
env_logger = "0.9.0"
ical = "0.7.0"
log = "0.4.14"
num-traits = "0.2.14"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["json"] }
rrule = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
